Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # Python package
+
 # Create and test a Python package on multiple Python versions.
 # Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
@@ -17,11 +18,9 @@ steps:
 - task: SonarQubePrepare@5
   inputs:
     SonarQube: 'SonarCube-GitHub-Integration-1'
-    scannerMode: 'CLI'
-    configMode: 'manual'
-    cliProjectKey: 'srinivas-test-azure'
-    cliProjectName: 'srinivas-test-azure'
-    cliSources: '.'
+    scannerMode: 'MSBuild'
+    projectKey: 'srinivas-test-azure'
+    projectName: 'srinivas-test-azure'
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '$(python.version)'
